--- a/reactPost/post/src/index.css
+++ b/reactPost/post/src/index.css
@@ -1,10 +1,7 @@
 body {
   box-sizing: border-box;
 }
-.tasks {
-  list-style-type: none;
-  color: brown;
-}
+
 .todo-input {
   border-radius: 20px;
 }
@@ -52,3 +49,67 @@ li {
   background-color: aqua;
   border-radius: 10px;
 }
+/* blog */
+.form-add {
+  max-width: 400px;
+  text-align: center;
+  margin: 0 auto;
+}
+.form-add label {
+  text-align: left;
+  display: block;
+}
+.form-add h3 {
+  margin-bottom: 30px;
+}
+.form-add input,.form-add textarea {
+  width: 100%;
+  display: block;
+  border: 1px solid rgb(201, 184, 153);
+  margin-bottom: 5px;
+}
+.form-add button {
+  background-color: blueviolet;
+  color: #f7efef;
+}
+/* blog navbar */
+.navContainer {
+  display: flex;
+  height: auto;
+  width: 100%;
+  background-color: antiquewhite;
+  
+  box-sizing: border-box;
+  justify-content: left;
+  align-items: center;
+ 
+}
+.navContainer a {
+  text-decoration: none;
+  padding: 20px;
+  border-radius: 10px;
+}
+ .navContainer a:hover {
+  background-color: aqua;
+ }
+ /* post list */
+ .postContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ }
+ .postContainer li{
+ 
+  list-style: none;
+  width: 50%;
+  border: 1px solid black;
+ }
+ .post {
+  margin: 20px;
+ }
+ .post h3 {
+  border: 1px solid black;
+  background-color: bisque;
+
+ }
